# avatar_navigation

./: .gitignore  CMakeLists.txt  README.md  package.xml
avatar_imu_controller/: 99-imu.rules  CMakeLists.txt  README.md  package.xml
avatar_imu_controller/launch/: driving_left.launch  driving_right.launch
avatar_imu_controller/scripts/: arduino_driver.py  imu_driver.py  imu_driver_enable.py  imu_driver_enable_v2.py
avatar_navigation/: CMakeLists.txt  package.xml
avatar_relay_control/: CMakeLists.txt  package.xml
avatar_relay_control/config/: arm_gripper.yaml
avatar_relay_control/launch/: accessories.launch  arm_gripper.launch  relay_control.launch  relay_control_base.launch
avatar_relay_control/msg/: RelayStatus.msg
avatar_relay_control/scripts/: change_state_script.py  relay.py  relay_controller.py
avatar_relay_control/srv/: SetRelay.srv
launch/: custom.launch  husky.launch  space_nav.launch
robalto_navigation/: CMakeLists.txt  package.xml
robalto_navigation/back/: CMakeLists.txt  package.xml
robalto_navigation/launch/: space_nav.launch
robalto_navigation/web/app/: index.html
robalto_navigation/web/app/assets/js/: avatar_gui.js
rviz/: view.rviz
src/: spacenav_node.cpp
vector_comm/nodes/: rospy_websocker_client.py  vector_base_config.py  vector_comm.py
vector_navigation/: CMakeLists.txt  package.xml
vector_navigation/launch/: obs_avoid.launch
vector_navigation/vector_assisted_teleop/: CMakeLists.txt  package.xml
vector_navigation/vector_assisted_teleop/config/: 3d_costmap_local.yaml  base_planner_params.yaml  costmap_common_params.yaml  costmap_local.yaml  teb_local_planner_params.yaml
vector_navigation/vector_assisted_teleop/include/vector_assisted_teleop/: vector_assisted_teleop.h
vector_navigation/vector_assisted_teleop/launch/: assisted_teleop.launch
vector_navigation/vector_assisted_teleop/rviz/: assisted_teleop.rviz
vector_navigation/vector_assisted_teleop/src/: vector_assisted_teleop.cpp
vector_navigation/vector_comm/: CMakeLists.txt  README.md  package.xml
vector_navigation/vector_comm/nodes/: vector_base_config.py  vector_comm.py
vector_navigation/vector_comm/scripts/: set_env.sh
vector_navigation/vector_comm/test/: node_test.py
vector_navigation/vector_move_base/: CMakeLists.txt  package.xml
vector_navigation/vector_move_base/config/: base_local_planner_params.yaml  common_costmap_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  planner_params.yaml  teb_local_planner_params.yaml
vector_navigation/vector_move_base/launch/: move_base.launch
vector_navigation/vector_move_base/rviz/: move_base.rviz
vector_navigation/vector_msgs/: CMakeLists.txt  package.xml
vector_navigation/vector_msgs/msg/: Dynamics.msg  LinearActuatorCmd.msg  Status.msg
vector_navigation/vector_navigation/: package.xml
vector_navigation/vector_reactive/: CMakeLists.txt  package.xml
vector_navigation/vector_reactive/launch/: obs_avoid.launch
vector_navigation/vector_reactive/rviz/: obs_avoid.rviz
vector_navigation/vector_teleop/: CMakeLists.txt  package.xml
vector_navigation/vector_teleop/launch/: teleop.launch
web/app/css/: styles.css
