<?xml version="1.0"?>
<package format="2">
  <name>robalto_navigation</name>
  <version>0.0.0</version>
  <description>The robalto_navigation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rui@todo.todo">rui</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>libspnav-dev</depend>
  <depend>libx11-dev</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbridge_server</depend>

  <exec_depend>spacenav_node</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
