<package>
    <name>vector_assisted_teleop</name>
    <version>0.0.1</version>
    <description>Node to aid in teleoperation by avoiding obstacles</description>
    <maintainer email="dev@waypointrobotics.com">DEVELOPER</maintainer>
    <author>DEVELOPER</author>
    <url type="repository">https://github.com/waypoint_robotics</url>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>angles</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>filters</build_depend>
    <build_depend>eigen</build_depend>

    <run_depend>cmake_modules</run_depend>
    <run_depend>tf2_ros</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>move_base_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>angles</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>filters</run_depend>
    <run_depend>eigen</run_depend>

    <export>
    <cpp cflags="-I${prefix}/include `rosboost-cfg --cflags`" lflags=""/>
    </export>
</package>


