<?xml version="1.0"?>
<package format="2">
    <name>vector_assisted_teleop</name>
    <version>0.0.1</version>
    <description>Node to aid in teleoperation by avoiding obstacles</description>
    <maintainer email="dev@waypointrobotics.com">DEVELOPER</maintainer>
    <author>DEVELOPER</author>
    <url type="repository">https://github.com/waypoint_robotics</url>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>angles</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>filters</build_depend>
    <build_depend>eigen</build_depend>

    <exec_depend>cmake_modules</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>roslib</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>move_base_msgs</exec_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>message_filters</exec_depend>
    <exec_depend>base_local_planner</exec_depend>
    <exec_depend>angles</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>filters</exec_depend>
    <exec_depend>eigen</exec_depend>

    <export>
    <cpp cflags="-I${prefix}/include `rosboost-cfg --cflags`" lflags=""/>
    </export>
</package>
